Skeleton for Category tree and Category Window and supporting libs

--- a/private/goexw/goexw/goexw.csproj
+++ b/private/goexw/goexw/goexw.csproj
@@ -180,6 +180,33 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\jqueryui\images\ui-bg_diagonals-thick_18_b81900_40x40.png" />
+    <Content Include="Content\jqueryui\images\ui-bg_diagonals-thick_20_666666_40x40.png" />
+    <Content Include="Content\jqueryui\images\ui-bg_flat_10_000000_40x100.png" />
+    <Content Include="Content\jqueryui\images\ui-bg_glass_100_f6f6f6_1x400.png" />
+    <Content Include="Content\jqueryui\images\ui-bg_glass_100_fdf5ce_1x400.png" />
+    <Content Include="Content\jqueryui\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Content\jqueryui\images\ui-bg_gloss-wave_35_f6a828_500x100.png" />
+    <Content Include="Content\jqueryui\images\ui-bg_highlight-soft_100_eeeeee_1x100.png" />
+    <Content Include="Content\jqueryui\images\ui-bg_highlight-soft_75_ffe45c_1x100.png" />
+    <Content Include="Content\jqueryui\images\ui-icons_222222_256x240.png" />
+    <Content Include="Content\jqueryui\images\ui-icons_228ef1_256x240.png" />
+    <Content Include="Content\jqueryui\images\ui-icons_ef8c08_256x240.png" />
+    <Content Include="Content\jqueryui\images\ui-icons_ffd27a_256x240.png" />
+    <Content Include="Content\jqueryui\images\ui-icons_ffffff_256x240.png" />
+    <Content Include="Content\jqueryui\jquery-ui.min.css" />
+    <Content Include="Content\jqueryui\jquery-ui.structure.min.css" />
+    <Content Include="Content\jqueryui\jquery-ui.theme.min.css" />
+    <Content Include="Content\jstreethemes\default-dark\32px.png" />
+    <Content Include="Content\jstreethemes\default-dark\40px.png" />
+    <Content Include="Content\jstreethemes\default-dark\style.css" />
+    <Content Include="Content\jstreethemes\default-dark\style.min.css" />
+    <Content Include="Content\jstreethemes\default-dark\throbber.gif" />
+    <Content Include="Content\jstreethemes\default\32px.png" />
+    <Content Include="Content\jstreethemes\default\40px.png" />
+    <Content Include="Content\jstreethemes\default\style.css" />
+    <Content Include="Content\jstreethemes\default\style.min.css" />
+    <Content Include="Content\jstreethemes\default\throbber.gif" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -190,13 +217,16 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery-ui.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\jstree.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\searchcomponent.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
