Add the Contract Reference and Atom Http Proxy

--- a/private/goexw/goexw.Tests/goexw.Tests.csproj
+++ b/private/goexw/goexw.Tests/goexw.Tests.csproj
@@ -35,6 +35,9 @@
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="MsStore.Mfl.Core.Contract">
+      <HintPath>..\packages\MsStore.Mfl.Core.Contract.dll.1.0.2\MsStore.Mfl.Core.Contract.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -84,6 +87,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="Proxy\AtomComProxyTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
