--- a/private/goexw/goexw/goexw.csproj
+++ b/private/goexw/goexw/goexw.csproj
@@ -161,7 +161,28 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
-    <Compile Include="Config\AtomComConfig.cs" />
+    <Compile Include="Business\Managers\InventoryManager.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Business\Managers\SalesOrderManager.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Business\Models\Delivery.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Business\Models\Inventory.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Business\Models\ProductItem.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Business\Models\SalesLine.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Business\Models\SalesOrder.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Config\SystemConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -174,6 +195,11 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helper\AtomCommerceProxy.cs" />
+    <Compile Include="Helper\AtomModelExtension.cs" />
+    <Compile Include="Helper\ModelConvert.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Helper\ProductItemLocator.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
