--- a/private/goexw/goexw/goexw.csproj
+++ b/private/goexw/goexw/goexw.csproj
@@ -206,8 +206,10 @@
     <Compile Include="Models\MockDataProvider.cs" />
     <Compile Include="Models\MockProductCategory.cs" />
     <Compile Include="Models\MockPromotion.cs" />
+    <Compile Include="Models\MockShipMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\SearchPartialViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
