update search result view to render search result
1. add mock data for query catalog result
2. add UI layout to render result
3. add pagination to show 10 items on one page
4. update title bar UI ( remove container class)
5. add navigation to specific catalog from query result page (  to detail page )

--- a/private/goexw/goexw/goexw.csproj
+++ b/private/goexw/goexw/goexw.csproj
@@ -202,14 +202,20 @@
     </Compile>
     <Compile Include="Helper\ProductItemLocator.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Catalog\CatalogAction.cs" />
+    <Compile Include="Models\Catalog\CatalogItem.cs" />
+    <Compile Include="Models\Catalog\CatalogRequestModel.cs" />
+    <Compile Include="Models\Catalog\CatalogResponseModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\MockDataProvider.cs" />
-    <Compile Include="Models\MockProductCategory.cs" />
-    <Compile Include="Models\MockPromotion.cs" />
-    <Compile Include="Models\MockShipMethod.cs" />
+    <Compile Include="Models\Mock\MockCatalogResponse.cs" />
+    <Compile Include="Models\Mock\MockDataProvider.cs" />
+    <Compile Include="Models\Mock\MockProductCategory.cs" />
+    <Compile Include="Models\Mock\MockPromotion.cs" />
+    <Compile Include="Models\Mock\MockShipMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\QueryCatalogViewModel.cs" />
     <Compile Include="ViewModels\SearchPartialViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
