update the search partial to remember user input when transfer between different page
1. add search partial parameter to get user input from get Parameters
2. update UI logic to reflect the parameter to UI elements

--- a/private/goexw/goexw/goexw.csproj
+++ b/private/goexw/goexw/goexw.csproj
@@ -215,7 +215,8 @@
     <Compile Include="Models\Mock\MockShipMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\QueryCatalogViewModel.cs" />
+    <Compile Include="ViewModels\QueryCatalogFormViewModel.cs" />
+    <Compile Include="ViewModels\QueryCatalogReportViewModel.cs" />
     <Compile Include="ViewModels\SearchPartialViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
