--- a/private/goexw/goexw/goexw.csproj
+++ b/private/goexw/goexw/goexw.csproj
@@ -202,6 +202,7 @@
     </Compile>
     <Compile Include="Helper\ProductItemLocator.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CartModel.cs" />
     <Compile Include="Models\Catalog\CatalogAction.cs" />
     <Compile Include="Models\Catalog\CatalogItem.cs" />
     <Compile Include="Models\Catalog\CatalogRequestModel.cs" />
@@ -280,6 +281,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\searchpartial.js" />
+    <Content Include="Scripts\simpleCart.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -322,10 +324,10 @@
     <Content Include="Views\Search\Index.cshtml" />
     <Content Include="Views\Product\Detail.cshtml" />
     <Content Include="Views\Search\SearchPartial.cshtml" />
+    <Content Include="Views\Cart\View.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Cart\" />
     <Folder Include="Views\Order\" />
     <Folder Include="Views\Settings\" />
   </ItemGroup>
