Update the search result to use real API call
1. basic api call with code without error check to unblock others
2. need to add more error check

--- a/private/goexw/goexw/goexw.csproj
+++ b/private/goexw/goexw/goexw.csproj
@@ -216,6 +216,7 @@
     <Compile Include="Models\Mock\MockShipMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\ProductDetailViewModel.cs" />
     <Compile Include="ViewModels\QueryCatalogFormViewModel.cs" />
     <Compile Include="ViewModels\QueryCatalogReportViewModel.cs" />
     <Compile Include="ViewModels\SearchPartialViewModel.cs" />
