Connect the Direct Commit and Order History.

--- a/private/goexw/goexw/Views/Web.config
+++ b/private/goexw/goexw/Views/Web.config
@@ -24,7 +24,7 @@
 
     <appSettings>
         <add key="webpages:Enabled" value="false" />
-        <add key="AtomComRoot" value="http://msstoreBuddy.chinacloudapp.cn/v1/"/>
+        <add key="AtomComRoot" value="http://msstorebuddy.chinacloudapp.cn/api/v1/"/>
     </appSettings>
 
     <system.webServer>
