--- a/private/goexw/goexw/Web.config
+++ b/private/goexw/goexw/Web.config
@@ -17,7 +17,7 @@
         <add key="webpages:Enabled" value="false" />
         <add key="ClientValidationEnabled" value="true" />
         <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-        <add key="AtomComRoot" value="http://msstoreBuddy.chinacloudapp.cn/v1/"/>
+        <add key="AtomComRoot" value="http://msstorebuddy.chinacloudapp.cn/api/v1/"/>
     </appSettings>
     <system.web>
         <authentication mode="None" />
