Modfiy the customer id.

--- a/private/goexw/goexw/Web.config
+++ b/private/goexw/goexw/Web.config
@@ -18,6 +18,7 @@
         <add key="ClientValidationEnabled" value="true" />
         <add key="UnobtrusiveJavaScriptEnabled" value="true" />
         <add key="AtomComRoot" value="http://msstorebuddy.chinacloudapp.cn/api/v1/"/>
+        <add key="Customer" value="MSAAuthUserID"/>
     </appSettings>
     <system.web>
         <authentication mode="None" />
