Update website picture
mainly about refrigerator now

--- a/private/goexw/goexw/goexw.csproj
+++ b/private/goexw/goexw/goexw.csproj
@@ -259,11 +259,21 @@
     <Content Include="Content\jstreethemes\default\style.css" />
     <Content Include="Content\jstreethemes\default\style.min.css" />
     <Content Include="Content\jstreethemes\default\throbber.gif" />
+    <Content Include="Content\mockimgs\circle1.jpg" />
+    <Content Include="Content\mockimgs\circle2.jpg" />
+    <Content Include="Content\mockimgs\circle3.jpg" />
+    <Content Include="Content\mockimgs\circle4.jpg" />
+    <Content Include="Content\mockimgs\circle5.jpg" />
     <Content Include="Content\mockimgs\mp1.jpg" />
+    <Content Include="Content\mockimgs\mp10.jpg" />
     <Content Include="Content\mockimgs\mp2.jpg" />
     <Content Include="Content\mockimgs\mp3.jpg" />
     <Content Include="Content\mockimgs\mp4.jpg" />
     <Content Include="Content\mockimgs\mp5.jpg" />
+    <Content Include="Content\mockimgs\mp6.jpg" />
+    <Content Include="Content\mockimgs\mp7.jpg" />
+    <Content Include="Content\mockimgs\mp8.jpg" />
+    <Content Include="Content\mockimgs\mp9.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
